Tidied up all files and refactored initialisation back into Java for classes.